--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <link rel="stylesheet" href="./style.css" type="text/css">
 </head>
 <body>
-  <div class="container">
+  <main class="container">
     <img src="./images/image-qr-code.png" alt="qr-code" class="qr-code">
 
-    <h2>Improve your front-end skils by building projects</h2>
+    <h1>Improve your front-end skils by building projects</h1>
     <p>Scan the QR code to visit Frontend Mentor and take your coding skils to the next level</p>
-  </div>
+  </main>
 </body>
 </html>
